fixed wrapping bug in fields.html

--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -5,6 +5,7 @@
 .form-row{
     margin-top: 10px ;
     margin-left: 0px;
+    white-space: nowrap;
 }
 
 .form-box{
